--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -70,11 +70,11 @@
 
       /* --- KOTAK UTAMA (TOMBOL) --- */
       .kb-box {
-        background: #dbe7b2;
+        background: #126e80;
         padding: 30px 20px;
         border-radius: 25px;
         text-decoration: none;
-        color: #222;
+        color: #ffffff;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -87,7 +87,7 @@
 
       .kb-box:hover {
         transform: translateY(-5px); /* Sedikit naik saat hover */
-        background: #c9dc96;
+        background: #126e80;
         box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
       }
 
@@ -154,7 +154,7 @@
       </div>
     </div>
 
-    <h1 class="title">Aktivitas Terminal</h1>
+    <h1 class="title">AKTIVITAS TERMINAL</h1>
 
     <div class="kb-container">
       <a href="aktivitas1.html" class="kb-box">
