--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -59,7 +59,7 @@
       .diagram-wrapper {
         display: flex;
         justify-content: center;
-        gap: 70px;
+        gap: 0;
         padding-bottom: 80px;
       }
 
@@ -141,12 +141,12 @@
       /* Node */
       .node {
         display: inline-block;
-        padding: 45px 25px;
+        padding: 25px 15px;
         border-radius: 15px;
         border: 2px solid #000;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 700;
-        width: 100px;
+        width: 70px;
         cursor: pointer;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
         transition: 0.3s;
